fixed issue with responsive header(white space)

--- a/css/homestyles.css
+++ b/css/homestyles.css
@@ -593,10 +593,17 @@ template {
   .hblockup {
     position: absolute;
     top: 10px;
-    right: -29px;
+    right: 33px;
+    justify-content: space-between !important;
+  }
+  .hblockup .phone + img {
+    display: none;
+  }
+  .hblockup .faceicon {
+    display: none;
   }
   .hblockup img {
-    visibility: hidden;
+    display: none;
   }
   .hblockup p:not(.ln) {
     visibility: hidden;
